# bridge

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  ruff.toml  sitemap.xml  tach.yml
.github/workflows/: ci.yml  publish.yml
bridge/: __init__.py  config.py  console.py  package.yml
bridge/cli/: bridge.py  deploy.py  errors.py  package.yml  stop.py
bridge/cli/db/: __init__.py
bridge/cli/deploy/: base.py  django.py
bridge/cli/init/: __init__.py  install_deps.py  render.py
bridge/cli/init/templates/: __init__.py  build__sh.py  build_worker__sh.py  deploy_to_render_button.py  render__yaml.py  render_build__sh.py  render_start_worker__sh.py  start__sh.py
bridge/cli/redis/: __init__.py
bridge/framework/: __init__.py  base.py  django.py  package.yml
bridge/platform/: __init__.py  base.py  package.yml  postgres.py  redis.py
bridge/platform/render/: __init__.py  postgres.py  redis.py
bridge/service/: celery.py  django_celery.py  docker.py  package.yml  postgres.py  redis.py
bridge/utils/: filesystem.py  package.yml  pydantic.py  sanitize.py
docs/: faq.md  getting-started.md  index.md
faq/: index.html
getting-started/: index.html
search/: search_index.json
tests/configuration/: test_django_local.py  test_django_render.py
tests/django/: requirements.txt
tests/django/django_bridge/: README.md  bridge.yaml  manage.py  render-build.sh  render-start-worker.sh  render-start.sh  render.yaml  requirements.txt
tests/django/django_bridge/bridge-django-render/: build-worker.sh  build.sh  start.sh
tests/django/django_bridge/django_bridge/: asgi.py  settings.py  urls.py  wsgi.py
tests/django/django_bridge/polls/: tasks.py  views.py
