[project]
name = "python-bridge"
version = "0.1.1"
authors = [
  { name="Caelean Barnes", email="caeleanb@gmail.com" },
  { name="Evan Doyle", email="evanmdoyle@gmail.com" },
]
description = "A Python tool to abstract your Django infrastructure."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ['python', 'deployment', 'local', 'infrastructure', 'postgres', 'django', 'architecture']
dependencies = [
    "docker==7.0.0",
    "psycopg[binary]==3.1.18",
    "redis==5.0.3",
    "celery==5.3.6",
    "flower==2.0.1",
    "rich==13.7.1",
    "pydantic==2.6.4",
    "pyyaml==6.0.1",
    "dj-database-url==2.1.0",
    "psutil==5.9.8",
]

[project.urls]
Homepage = "https://github.com/never-over/bridge"
Issues = "https://github.com/never-over/bridge/issues"

[tool.pyright]
include = ["bridge"]
exclude = ["**/__pycache__", '**/.venv']
reportMissingTypeStubs = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
bridge = "bridge.cli.bridge:main"
